--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@operatiemobilisatie/ui",
-  "version": "0.0.1",
+  "version": "0.0.3",
   "description": "A collection of React components for OM websites and applications.",
   "author": "@douwepausma",
   "license": "MIT",
@@ -50,6 +50,9 @@
     "./tailwindcss": "./dist/tailwind.config.js",
     "./css": "./src/globals.css"
   },
+  "files": [
+    "dist"
+  ],
   "publishConfig": {
     "registry": "https://npm.pkg.github.com/operatiemobilisatie"
   }
