--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@operatiemobilisatie/ui",
-  "version": "0.0.5",
+  "version": "0.0.6",
   "description": "A collection of React components for OM websites and applications.",
   "author": "@douwepausma",
   "license": "MIT",
@@ -47,7 +47,7 @@
   "type": "module",
   "exports": {
     "./*": "./dist/src/components/*.js",
-    "./lib/*": "./dist/src/lib/*.ts",
+    "./lib/*": "./dist/src/lib/*.js",
     "./tailwindcss": "./dist/tailwind.config.js",
     "./css": "./dist/css/style.css"
   },
