--- a/package.json
+++ b/package.json
@@ -14,9 +14,9 @@
     "@rollup/plugin-typescript": "^11.1.6",
     "@types/node": "^20.12.11",
     "@types/react": "^18.3.1",
-    "rollup-plugin-postcss": "^4.0.2",
     "rollup-plugin-dts": "^6.1.1",
     "rollup-plugin-peer-deps-external": "^2.2.4",
+    "rollup-plugin-postcss": "^4.0.2",
     "rollup-plugin-preserve-directives": "^0.4.0",
     "tailwindcss": "^3.4.3"
   },
@@ -63,5 +63,8 @@
   "types": "./dist/index.d.ts",
   "publishConfig": {
     "registry": "https://npm.pkg.github.com/operatiemobilisatie"
+  },
+  "dependencies": {
+    "@radix-ui/react-tabs": "^1.1.0"
   }
 }
