--- a/package.json
+++ b/package.json
@@ -65,6 +65,7 @@
     "registry": "https://npm.pkg.github.com/operatiemobilisatie"
   },
   "dependencies": {
-    "@radix-ui/react-tabs": "^1.1.0"
+    "@radix-ui/react-tabs": "^1.1.0",
+    "@radix-ui/react-tooltip": "^1.1.2"
   }
 }
