--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@operatiemobilisatie/ui",
-  "version": "0.1.1",
+  "version": "0.1.2",
   "description": "A collection of React components for OM websites and applications.",
   "author": "@douwepausma",
   "license": "MIT",
@@ -65,7 +65,10 @@
     "registry": "https://npm.pkg.github.com/operatiemobilisatie"
   },
   "dependencies": {
+    "@radix-ui/react-radio-group": "^1.2.0",
     "@radix-ui/react-tabs": "^1.1.0",
+    "@radix-ui/react-toggle": "^1.1.0",
+    "@radix-ui/react-toggle-group": "^1.1.0",
     "@radix-ui/react-tooltip": "^1.1.2"
   }
 }
