--- a/.github/workflows/deploy.yaml
+++ b/.github/workflows/deploy.yaml
@@ -16,4 +16,4 @@ jobs:
       uses: bitovi/github-actions-storybook-to-github-pages@v1.0.3
       with:
         build_command: npm run build-storybook
-        path: build # change to your build folder
+        path: dist/storybook # change to your build folder
