--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
     "rollup": "npx rollup -c",
     "rollup-watch": "npx rollup -cw",
     "storybook": "storybook dev -p 6006",
-    "build-storybook": "storybook build -- -o ./.storybook/static"
+    "build-storybook": "storybook build --output-dir .storybook/static"
   },
   "devDependencies": {
     "@rollup/plugin-commonjs": "^25.0.7",
