--- a/.github/workflows/deploy.yaml
+++ b/.github/workflows/deploy.yaml
@@ -15,5 +15,4 @@ jobs:
     - id: build-publish
       uses: bitovi/github-actions-storybook-to-github-pages@v1.0.3
       with:
-        build_command: npm run build-storybook
-        path: dist/storybook # change to your build folder
+        path: .storybook/static # change to your build folder
