--- a/package.json
+++ b/package.json
@@ -65,7 +65,9 @@
     "react": ">=18.0",
     "react-select": ">=5.8.1",
     "tailwind-merge": ">=2.3.0",
-    "tailwindcss-animate": ">=1.0.7"
+    "tailwindcss-animate": ">=1.0.7",
+    "react-countup": "^6.5.3",
+    "react-visibility-sensor": "^5.1.1"
   },
   "files": [
     "dist"
