--- a/.github/workflows/npm-publish.yml
+++ b/.github/workflows/npm-publish.yml
@@ -16,6 +16,7 @@ jobs:
         with:
           node-version: '20.x'
           registry-url: https://npm.pkg.github.com
+      - run: npm install --package-lock-only
       - run: npm ci
       - run: npm run rollup
       - run: npm publish
