--- a/package.json
+++ b/package.json
@@ -57,6 +57,9 @@
     "@radix-ui/react-toggle-group": "^1.1.1",
     "@radix-ui/react-tooltip": "^1.1.7",
     "@tailwindcss/typography": ">=0.5.10",
+    "@operatiemobilisatie/ui": "^0.11.1",
+    "@operatiemobilisatie/react-om-forms": "^2.8.17",
+    "@operatiemobilisatie/react-om-payment": "^0.2.0",
     "class-variance-authority": ">=0.7.0",
     "classnames": ">=2.5.1",
     "clsx": ">=2.1.1",
