--- a/package.json
+++ b/package.json
@@ -24,7 +24,8 @@
     "@storybook/react-webpack5": "^8.4.0",
     "@storybook/test": "^8.4.0",
     "@types/node": "^20.12.11",
-    "@types/react": "^19.0.10",
+    "@types/react": "^19.0.12",
+    "@types/react-dom": "^19.0.4",
     "postcss": "^8.4.47",
     "postcss-loader": "^8.1.1",
     "prop-types": "^15.8.1",
@@ -36,40 +37,40 @@
     "tailwindcss": "^3.4.3"
   },
   "dependencies": {
-    "@fortawesome/fontawesome-svg-core": "^6.5.1",
-    "@fortawesome/free-solid-svg-icons": "^6.5.1",
-    "@fortawesome/react-fontawesome": "^0.2.0",
-    "@radix-ui/react-accordion": "^1.2.2",
-    "@radix-ui/react-alert-dialog": "^1.1.5",
-    "@radix-ui/react-avatar": "^1.1.2",
-    "@radix-ui/react-checkbox": "^1.1.3",
-    "@radix-ui/react-dialog": "^1.1.5",
-    "@radix-ui/react-dropdown-menu": "^2.1.5",
-    "@radix-ui/react-label": "^2.1.1",
-    "@radix-ui/react-progress": "^1.1.1",
-    "@radix-ui/react-radio-group": "^1.2.2",
-    "@radix-ui/react-slider": "^1.2.2",
-    "@radix-ui/react-slot": "^1.1.1",
-    "@radix-ui/react-switch": "^1.1.2",
-    "@radix-ui/react-tabs": "^1.1.2",
-    "@radix-ui/react-toast": "^1.2.5",
-    "@radix-ui/react-toggle": "^1.1.1",
-    "@radix-ui/react-toggle-group": "^1.1.1",
-    "@radix-ui/react-tooltip": "^1.1.7",
+    "@fortawesome/fontawesome-svg-core": "^6.7.2",
+    "@fortawesome/free-solid-svg-icons": "^6.7.2",
+    "@fortawesome/react-fontawesome": "^0.2.2",
+    "@radix-ui/react-accordion": "^1.2.3",
+    "@radix-ui/react-alert-dialog": "^1.1.6",
+    "@radix-ui/react-avatar": "^1.1.3",
+    "@radix-ui/react-checkbox": "^1.1.4",
+    "@radix-ui/react-dialog": "^1.1.6",
+    "@radix-ui/react-dropdown-menu": "^2.1.6",
+    "@radix-ui/react-label": "^2.1.2",
+    "@radix-ui/react-progress": "^1.1.2",
+    "@radix-ui/react-radio-group": "^1.2.3",
+    "@radix-ui/react-slider": "^1.2.3",
+    "@radix-ui/react-slot": "^1.1.2",
+    "@radix-ui/react-switch": "^1.1.3",
+    "@radix-ui/react-tabs": "^1.1.3",
+    "@radix-ui/react-toast": "^1.2.6",
+    "@radix-ui/react-toggle": "^1.1.2",
+    "@radix-ui/react-toggle-group": "^1.1.2",
+    "@radix-ui/react-tooltip": "^1.1.8",
     "@tailwindcss/typography": ">=0.5.10",
     "class-variance-authority": ">=0.7.0",
     "classnames": ">=2.5.1",
     "clsx": ">=2.1.1",
     "motion": "^12.4.10",
     "react-countup": "^6.5.3",
-    "react-select": "^5.9.0",
+    "react-select": "^5.10.1",
     "tailwind-merge": ">=2.3.0",
     "tailwindcss-animate": ">=1.0.7"
   },
   "peerDependencies": {
-    "next": "^14.0 || ^15.0",
-    "react": "^18.0.0 || ^19.0.0 || ^19.0.0-rc",
-    "react-dom": "^18.0.0 || ^19.0.0 || ^19.0.0-rc"
+    "next": "14^ || ^15",
+    "react": "18^ || ^19",
+    "react-dom": "18^ || ^19"
   },
   "files": [
     "dist"
@@ -78,15 +79,15 @@
   "exports": {
     ".": {
       "types": "./dist/index.d.ts",
-      "default": "./dist/ui/src/index.js"
+      "default": "./dist/src/index.js"
     },
     "./*": {
       "types": "./dist/src/components/*.d.ts",
-      "default": "./dist/ui/src/components/*.js"
+      "default": "./dist/src/components/*.js"
     },
-    "./lib/*": "./dist/ui/src/lib/*.js",
+    "./lib/*": "./dist/src/lib/*.js",
     "./tailwindcss": "./dist/tailwind.config.js",
-    "./css": "./dist/css/style.css"
+    "./css": "./dist/src/css/style.css"
   },
   "types": "./dist/index.d.ts",
   "publishConfig": {
