--- a/tsconfig.json
+++ b/tsconfig.json
@@ -14,7 +14,7 @@
       "sourceMap": true,
       "outDir": "dist",
       "declarationDir": "dist",
-      "moduleResolution": "node",
+      "moduleResolution": "bundler",
       "allowSyntheticDefaultImports": true,
       "allowImportingTsExtensions": true,
       "emitDeclarationOnly": true,
