Update to storybook@9

--- a/package.json
+++ b/package.json
@@ -14,15 +14,10 @@
     "@rollup/plugin-commonjs": "^25.0.7",
     "@rollup/plugin-node-resolve": "^15.2.3",
     "@rollup/plugin-typescript": "^11.1.6",
-    "@storybook/addon-essentials": "^8.4.0",
-    "@storybook/addon-interactions": "^8.4.0",
     "@storybook/addon-postcss": "^2.0.0",
-    "@storybook/addon-webpack5-compiler-swc": "^1.0.5",
-    "@storybook/blocks": "^8.4.0",
-    "@storybook/nextjs": "^8.4.0",
-    "@storybook/react": "^8.4.0",
-    "@storybook/react-webpack5": "^8.4.0",
-    "@storybook/test": "^8.4.0",
+    "@storybook/addon-webpack5-compiler-swc": "^3.0.0",
+    "@storybook/nextjs": "^9.1.2",
+    "@storybook/react-webpack5": "^9.1.2",
     "@tailwindcss/postcss": "^4.1.12",
     "@types/minimatch": "^5.1.2",
     "@types/node": "^20",
@@ -35,8 +30,9 @@
     "rollup-plugin-peer-deps-external": "^2.2.4",
     "rollup-plugin-postcss": "^4.0.2",
     "rollup-plugin-preserve-directives": "^0.4.0",
-    "storybook": "^8.4.0",
-    "tailwindcss": "^4.1.12"
+    "storybook": "^9.1.2",
+    "tailwindcss": "^4.1.12",
+    "@storybook/addon-docs": "^9.1.2"
   },
   "dependencies": {
     "@fortawesome/fontawesome-svg-core": "^6.7.2",
