--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@rollup/plugin-commonjs": "^25.0.7",
     "@rollup/plugin-node-resolve": "^15.2.3",
     "@rollup/plugin-typescript": "^11.1.6",
+    "@storybook/addon-docs": "^9.1.2",
     "@storybook/addon-postcss": "^2.0.0",
     "@storybook/addon-webpack5-compiler-swc": "^3.0.0",
     "@storybook/nextjs": "^9.1.2",
@@ -31,8 +32,7 @@
     "rollup-plugin-postcss": "^4.0.2",
     "rollup-plugin-preserve-directives": "^0.4.0",
     "storybook": "^9.1.2",
-    "tailwindcss": "^4.1.12",
-    "@storybook/addon-docs": "^9.1.2"
+    "tailwindcss": "^4.1.12"
   },
   "dependencies": {
     "@fortawesome/fontawesome-svg-core": "^6.7.2",
