--- a/package.json
+++ b/package.json
@@ -70,6 +70,9 @@
     "react": "18^ || ^19",
     "react-dom": "18^ || ^19"
   },
+  "optionalDependencies": {
+    "@rollup/rollup-linux-x64-gnu": "*"
+  },
   "files": [
     "dist"
   ],
