--- a/package.json
+++ b/package.json
@@ -55,20 +55,20 @@
     "@radix-ui/react-toggle": "^1.1.2",
     "@radix-ui/react-toggle-group": "^1.1.2",
     "@radix-ui/react-tooltip": "^1.1.8",
-    "@tailwindcss/typography": ">=0.5.10",
-    "class-variance-authority": ">=0.7.0",
-    "classnames": ">=2.5.1",
-    "clsx": ">=2.1.1",
+    "@tailwindcss/typography": "^0.5.10",
+    "class-variance-authority": "^0.7.0",
+    "classnames": "^2.5.1",
+    "clsx": "^2.1.1",
     "motion": "^12.4.10",
     "react-countup": "^6.5.3",
     "react-select": "^5.10.2",
-    "tailwind-merge": ">=2.3.0",
-    "tailwindcss-animate": ">=1.0.7"
+    "tailwind-merge": "^2.3.0",
+    "tailwindcss-animate": "^1.0.7"
   },
   "peerDependencies": {
-    "next": "14^ || ^15",
-    "react": "18^ || ^19",
-    "react-dom": "18^ || ^19"
+    "next": "^14 || ^15",
+    "react": "^18 || ^19",
+    "react-dom": "^18 || ^19"
   },
   "optionalDependencies": {
     "@rollup/rollup-linux-x64-gnu": "*"
@@ -92,5 +92,9 @@
   "types": "./dist/index.d.ts",
   "publishConfig": {
     "registry": "https://npm.pkg.github.com/operatiemobilisatie"
+  },
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/operatiemobilisatie/ui.git"
   }
 }
